2016-04-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Rename
	esim member to priv and make it void.
	* e-hal/src/epiphany-hal-data.h (e_epiphany_t): Likewise.
	(e_mem_t): Likewise.
	* e-hal/src/e-loader.c (ee_process_elf): Adjust for above name
	change.
	* e-hal/src/epiphany-hal.c (e_open): Likewise.
	(e_alloc): Likewise.
	* e-hal/src/epiphany-shm-manager.c (e_shm_init_esim):
	Likewise.
	(e_shm_alloc): Likewise.
	(e_shm_attach): Likewise.
	* e-hal/src/esim-target.c (ee_read_word_esim): Likewise.
	(ee_write_word_esim): Likewise.
	(ee_read_buf_esim): Likewise.
	(ee_write_buf_esim): Likewise.
	(ee_read_reg_esim): Likewise.
	(ee_write_reg_esim): Likewise.
	(ee_mread_word_esim): Likewise.
	(ee_mwrite_word_esim): Likewise.
	(ee_mread_buf_esim): Likewise.
	(ee_mwrite_buf_esim): Likewise.
	(ee_init_esim): Likewise.
	(ee_finalize_esim): Likewise.

2016-04-08  Ola Jeppsson  <ola@adapteva.com>

	* e-lib/src/e_reg_read.c (e_reg_read): Drop volatile qualifier
	for reg_val. Don't call e_global_address().
	* e-lib/src/e_reg_write.c (e_reg_write): Likewise.

2016-04-08  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany2.h: New file.

2016-04-07  Ola Jeppsson  <ola@adapteva.com>

	* e-trace/Makemodule.am (e-trace-server): Add ETRACE_LIBS to
	link.
	(e-trace-dump): Likewise.

2016-04-04  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf: Reserve addresses below 0x100
	for internal use.
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.

2016-03-21  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data.h (e_sys_reg_id_t): Remove enum.
	(e_syscfg_tx_t): Remove struct.
	(e_syscfg_rx_t): Remove struct.
	(e_syscfg_clk_t) Remove struct.
	(e_syscfg_coreid_t): Remove struct.
	(e_syscfg_version_t): Remove struct.
	(e_syscfg_gpio_t): Remove struct.
	* e-utils/src/e-hw-rev.c (e_syscfg_version_t): Add struct
	(HACK).
