@@ -1,5 +1,16 @@
 2016-04-18  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal-data-local.h (e_target_ops): Add
+	open() and close() target functions.
+	* e-hal/src/epiphany-hal.c (e_open): Call target open function
+	if target is PAL.
+	(e_close): Call target close function if target is PAL.
+	(pal_open): Add dummy function.
+	(pal_close): Add dummy function.
+	(pal_target_ops): Point to pal_open()/pal_close().
+
+2016-04-18  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Rename
 	esim member to priv and make it void.
 	* e-hal/src/epiphany-hal-data.h (e_epiphany_t): Likewise.
